3.3.0 backport